INREL-3804 fix wrong products placeholder on mobile

--- a/sass/mixins/_mixins.products.scss
+++ b/sass/mixins/_mixins.products.scss
@@ -274,13 +274,10 @@
     }
 
     .img-container {
-      height: auto;
       margin-bottom: 0;
       padding-left: 0;
-    }
-
-    .caption {
-      padding-left: 0;
+      padding-right: 0;
+      padding-bottom: $products__img-ratio-mobile--grid-article;
     }
   }
 }
